maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: illegal start of simple expression
  var L : Array [Int] = [0,0]
                        ^